[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Sprites/Ennemie/Enemy_3_Neon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/big.gd" type="Script" id=2]
[ext_resource path="res://Scenes/boulette.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Sounds/shoot.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 191.926

[node name="big" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource( 2 )
boulette = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.59816
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
rotation = 1.57545
polygon = PoolVector2Array( 19.925, -59.437, 57.925, -49.437, 45.925, 62.563, 29.925, 52.563, 31.925, 26.563, -0.0750122, 14.563, -30.075, 24.563, -30.075, 52.563, -46.075, 60.563, -58.075, -45.437, -46.075, -53.437, -20.075, -59.437 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -4, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 4, -14 )
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 140, 1.52588e-05 )
rotation = 1.68227

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 94, 68 )
rotation = 1.56984

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( 108, -80 )
rotation = 1.55505

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
